--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -17,11 +17,17 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
     "fork-ts-checker-webpack-plugin": "^7.2.11",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
     "react-refresh": "^0.13.0",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.24",
     "type-fest": "^2.12.2",
     "typescript": "^4.6.4",
     "webpack": "^5.72.1",
