--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --hot",
+    "start": "webpack serve --hot --progress",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "keywords": [],
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0"
   }
 }
