--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.4",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "fork-ts-checker-webpack-plugin": "^7.2.11",
