--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
