--- a/projects/storage/package.json
+++ b/projects/storage/package.json
@@ -18,5 +18,8 @@
     "rollup-plugin-typescript2": "^0.31.2",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "dexie": "^2.0.4"
   }
 }
