--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -37,11 +37,13 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "@xstate/react": "^3.0.0",
     "classnames": "^2.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "storage": "workspace:^1.0.0",
-    "vicui": "workspace:^1.0.0"
+    "vicui": "workspace:^1.0.0",
+    "xstate": "^4.32.1"
   }
 }
