feat： 更新 dexie 为最新版本

--- a/projects/storage/tsconfig.json
+++ b/projects/storage/tsconfig.json
@@ -11,6 +11,7 @@
     // 下面这两个选项用来解决打包 async 函数出错的问题
     "baseUrl": ".",
     "moduleResolution": "node",
+    "target": "ESNext",
     "paths": {
       "tslib": ["node_modules/tslib/tslib.d.ts"]
     },
