--- a/projects/storage/package.json
+++ b/projects/storage/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "rollup": "^2.74.1",
     "rollup-plugin-typescript2": "^0.31.2",
@@ -20,6 +21,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "dayjs": "^1.11.3",
     "dexie": "^3.2.2"
   }
 }
