--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -37,8 +37,10 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "@xstate/immer": "0.3.1",
     "@xstate/react": "^3.0.0",
     "classnames": "^2.3.1",
+    "immer": "9.0.15",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
