--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -41,9 +41,11 @@
     "@xstate/react": "^3.0.0",
     "classnames": "^2.3.1",
     "immer": "9.0.15",
+    "observable-hooks": "^4.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
+    "rxjs": "^7.5.6",
     "storage": "workspace:^1.0.0",
     "vicui": "workspace:^1.0.0",
     "xstate": "^4.32.1"
