--- a/projects/client/tsconfig.json
+++ b/projects/client/tsconfig.json
@@ -6,11 +6,12 @@
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "jsx": "react",
     // 下面两个选项用来解决打包 async 报错的问题
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "moduleResolution": "node",
     "paths": {
+      "src": ["src/*"],
       "tslib": ["node_modules/tslib/tslib.d.ts"]
     }
   },
-  "include": ["src/*"]
+  "include": ["src/*", "src/**/*.d.ts"]
 }
