--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.6",
+    "@svgr/webpack": "^6.3.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "autoprefixer": "^10.4.7",
@@ -40,6 +41,7 @@
     "@xstate/immer": "0.3.1",
     "@xstate/react": "^3.0.0",
     "classnames": "^2.3.1",
+    "dayjs": "^1.11.3",
     "immer": "9.0.15",
     "observable-hooks": "^4.2.0",
     "react": "^18.1.0",
